Added a way to delete a folder.

Pooka now remembers its location on screen when restarting.

fixed a problem in Preview mode in which the folder toolbar wouldn't get
activated on startup.

optimized the caching system somewhat so that we're not writing files over
and over agian to the filesystem.  this may also fix a problem where a
message could be cached as blank if the connection to the store broke at
just the right time.

attachment file choosers now remember your last directory, instead of always
starting in your home directory.

messages in Sent folders are no longer shown as new.

fixed theme support in preview pane mode.

changed the way we load the sun ssl class so that pooka will work on 
ibm's jdk 1.4.

made it so you get a warning message if you try to start with an unsupported
JDK.

add a find in page feature for Read Messages.

fixed a problem with the focus not always returning to the correct component.

030115 release
--------------

fixed lots of other problems in jdk 1.4, including incorrect sizing of some
of the configuration dialogs, some times when focus wouldn't follow back from
a deleted message, and....  some other stuff.  don't remember it all.

fixed SSL on jdk 1.4

----- branched for 1.1/2.0 release. -----

fixed a bug where part of the error message was getting shown twice.

made it so the INBOX is required for imap servers.  with luck this will work
around a problem in which the inbox sometimes doesn't show up for imap 
stores.

temporary files for attachments now have the attachment's extension.  

fixed a bug where the copy button on messages wasn't getting enabled.

made it so imap connections time out more quickly.

fixed the build information so that we now include the kunststoff files.

modified the toolbars and the images some.

added an easier interface for adding new folders.

fixed a bug where multipart/alternative messages with additional attachments
weren't getting parsed properly.
