@@ -439,8 +439,6 @@ public class CachingFolderInfo extends net.suberic.pooka.UIDFolderInfo {
    */
   
   public int getFirstUnreadMessage() {
-
-    
     // one part brute, one part force, one part ignorance.
     
     if (Pooka.isDebug())
@@ -1027,6 +1025,18 @@ public class CachingFolderInfo extends net.suberic.pooka.UIDFolderInfo {
     
   }
   
+  /**
+   * This unsubscribes this FolderInfo and all of its children, if 
+   * applicable.
+   *
+   * For the CachingFolderInfo, this calls super.unsubscribe() and 
+   * getCache().invalidateCache().
+   */
+  public void unsubscribe() {
+    super.unsubscribe();
+    getCache().invalidateCache();
+  }
+
   /**
    * Searches for messages in this folder which match the given
    * SearchTerm.
